--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"@testing-library/user-event": "^13.5.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
+		"react-icons": "^5.3.0",
 		"react-scripts": "5.0.1",
 		"web-vitals": "^2.1.4"
 	},
@@ -38,6 +39,6 @@
 	},
 	"devDependencies": {
 		"@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-		"react-router-dom": "^6.26.1"
+		"react-router-dom": "^6.26.2"
 	}
 }
