--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "create-react-app",
 	"version": "0.1.0",
-	"homepage": "https://.tfdf63.github.io/tg-app-fc",
+	"homepage": "https://.tfdf63.github.io",
 	"private": true,
 	"dependencies": {
 		"@testing-library/jest-dom": "^5.17.0",
