--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
 	"name": "create-react-app",
 	"version": "0.1.0",
-	"homepage": "https://.tfdf63.github.io/tg-app-fc",
 	"private": true,
 	"dependencies": {
-		"@testing-library/jest-dom": "^5.17.0",
-		"@testing-library/react": "^13.4.0",
-		"@testing-library/user-event": "^13.5.0",
+		"@testing-library/jest-dom": "^6.5.0",
+		"@testing-library/react": "^16.0.1",
+		"@testing-library/user-event": "^14.5.2",
+		"axios": "^1.7.7",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-icons": "^5.3.0",
 		"react-scripts": "5.0.1",
-		"web-vitals": "^2.1.4"
+		"web-vitals": "^4.2.3"
 	},
 	"scripts": {
 		"start": "react-scripts start",
@@ -19,6 +19,7 @@
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
 	},
+	"proxy": "http://localhost:5000",
 	"eslintConfig": {
 		"extends": [
 			"react-app",
